# adaptive-skill-system

./: .gitignore  .release-notes-v1.2.0.md  CHANGELOG.md  EXPERIENCE.template.md  GITHUB_RELEASE_v1.2.0.md  README.md  RELEASE_v1.2.0_SUMMARY.md  lineage_cli.py  migrate_kb_to_lineage.py  pyproject.toml  setup.py  test_simple.py  test_skill_executor_fix.py
.github/workflows/: ci.yml
adaptive_skill/: __init__.py  composer.py  core.py  errors.py  evaluator.py  generator.py  memory_system_client.py  protocols.py  retrieval.py  skill_executor_real.py  skill_lineage.py  thresholds.py
adaptive_skill/adapters/: __init__.py  kb_adapters.py
adaptive_skill/feedback/: __init__.py  collector.py
adaptive_skill/harness/: __init__.py  baseline.py  batch_runner.py  benchmark_suite.py  claim_benchmark_suite.py  cli.py  grader_runtime.py  (+9 more)
docs/: AUDIT_REPORT.md  BENCHMARK_GOVERNANCE.md  FULL_AUDIT_REPORT_v1.2.0.md  IMPROVEMENT_PLAN.md
scripts/: batch_comparison.md  dump_benchmark_cases.py  lineage_cli.py  migrate_kb_to_lineage.py  run_batch_real_p14.py  run_benchmark.py  run_harness_ci_suite.py  run_harness_claim_benchmark.py  run_harness_claim_benchmark_v2.py  run_harness_real_benchmark.py  run_release_claim_gate.py  run_threshold_sensitivity.py  seed_real_kb.py  threshold_sensitivity.py
tests/: test_audit_fixes.py  test_batch_runner.py  test_benchmark_suite.py  test_claim_benchmark_suite.py  test_claim_benchmark_v2_suite.py  test_composer.py  test_core.py  test_decision_trace.py  test_enterprise_scaffolding.py  test_generator.py  test_grader_pass_condition.py  test_harness.py  test_kb_ltm_isolation.py  test_memory_client.py  test_metrics_regression.py  test_protocols.py  test_real_cases.py  test_release_claim_gate.py  test_reporting.py  test_reporting_cli.py  test_retrieval.py  test_semantic_grader.py  test_skill_lineage_wal.py
(+8 files in other folders)
